# ndt_omp

./: CMakeLists.txt
apps/: align.cpp
